Fixed icons not showing in many browsers

--- a/gatsby/src/styles/styles.scss
+++ b/gatsby/src/styles/styles.scss
@@ -73,6 +73,9 @@ figcaption {
     &:hover, &:active {
         fill: $primary;
     }
+    .platform-icon {
+        width: 100%;
+    }
 }
 
 .is-emphasized {
